# kir

./: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
.planning/: MILESTONES.md  PROCESS.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  STYLE_GUIDE.md  config.json  v1.0-MILESTONE-AUDIT.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/notes/: claude-md-redesign-rationale.md  five-package-split-with-core-first.md  kir-vs-knowledge-synchronization-boundary.md
.planning/phases/01-compiler-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-04-PLAN.md  01-04-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-LEARNINGS.md  01-PATTERNS.md  01-RESEARCH.md  01-REVIEW.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-document-compiler/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-03-PLAN.md  02-03-SUMMARY.md  02-04-PLAN.md  02-04a-PLAN.md  02-04a-SUMMARY.md  02-04b-PLAN.md  02-04b-SUMMARY.md  02-AI-SPEC.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  (+6 more)
.planning/reports/: MILESTONE_SUMMARY-v1.0.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: check_style_rules.sh
src/kir/: __init__.py
tests/: __init__.py  conftest.py
tests/core/: __init__.py  test_cache_port_contract.py  test_import_boundaries.py  test_repository_port_contract.py
tests/llm/: test_cache.py  test_prompt_registry.py  test_pydantic_ai_adapter.py
tests/tooling/: __init__.py
(+116 files in other folders)
