[project]
name = "kir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mikhail niedre", email = "webcane@ya.ru" }
]
requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.13",
    "ruamel-yaml>=0.19",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest>=8",
    "ruff>=0.6",
]
