[project]
name = "kir"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mikhail niedre", email = "webcane@ya.ru" }
]
requires-python = ">=3.13"
dependencies = [
    "markdown-it-py>=4.2.0",
    "pydantic>=2.13",
    "pydantic-ai-slim[anthropic,openai]>=2.0,<3",
    "pydantic-settings>=2",
    "ruamel-yaml>=0.19",
]

[build-system]
requires = ["uv_build>=0.11.7,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # Errors, undefined names, warnings, isort
ignore = ["E501"]  # Line length (handled separately)

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.21",
    "ruff>=0.6",
]
